--- a/index.html
+++ b/index.html
@@ -200,8 +200,20 @@
       </div>
       </div>
       </section>
-    <!-- End first section -->
-    <!-- start second section -->
+    <!-- End section -->
+    <!--Newwslatter & Footer section -->
+    <div class="container d-flex align-items-center justify-content-center sub-section" id="subscribe">
+      <div>
+        <h3>LET'S STAY IN TOUCH</h3>
+        <h6>Get updates on sales, specials and more</h6>
+        <input class="form-control" type="text">
+        <button class="submit-now-button">SUBMIT</button>
+      </div>
+    </div>
+<!-- FDooter -->
+    <footer>
+      <small> ©2021-Panguin Fashion. All rights reserved. <a class="devurl" href="https://facebook.com/ahsanhabibsunny.sunny">Ahsan habib Sunny</a> . </small>
+    </footer>
 <!--Bootstrap JS CDN Link 4.6.0-->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
